only admin and index

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>后台管理</title>
 </head>
 
-<body>
-    <!-- built files will be auto injected -->
-    <div id="app"></div>
-</body>
-
+<body></body>
+<script>
+    local.href='admin/index.html'
+</script>
 </html>
