--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- 页面增加icon图标 -->
-    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico" rel="external nofollow" />
+    <link rel="shortcut icon external nofollow" type="image/x-icon" href="favicon.ico"/>
     <title>后台管理</title>
 </head>
 
 <body></body>
 <script>
-    local.href='admin/index.html'
+    location.href='admin/index.html'
 </script>
 </html>
