--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- 页面增加icon图标 -->
-    <link rel="shortcut icon external nofollow" type="image/x-icon" href="favicon.ico"/>
-    <title>后台管理</title>
-</head>
-
-<body></body>
-<script>
-    location.href='admin/index.html'
-</script>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" type=image/x-icon href=static/favicon.ico rel="external nofollow"><title>后台管理</title><link href=./static/css/app.0143f8b64f2c17488e3c8ea92efe8d27.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.6d55ffc831b3786e91fb.js></script><script type=text/javascript src=./static/js/app.28ddf2a52cc78c1e6e39.js></script></body></html>
